--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "terpstrakeyboard",
   "version": "1.0.0",
   "description": "[Homepage](http://terpstrakeyboard.com/)",
-  "main": "QueryData.js",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.3.5",
     "@types/webmidi": "^2.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.3.3",
     "vite": "^4.5.1"
   }
