--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.3.5",
+    "@types/uuid": "^10.0.0",
     "@types/webmidi": "^2.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.3.3",
